# rust-base

./: .env.test  Cargo.toml  Makefile
deploy/: docker-compose.yml
migrations/: 20230728191933_create_table_account.down.sql  20230728191933_create_table_account.up.sql
src/: lib.rs
src/application/: mod.rs
src/application/repository/: account.rs  mod.rs
src/application/repository/account/: mod.rs
src/application/security/: jwt.rs
src/application/usecase/: account.rs  mod.rs
src/domain/: account.rs
src/domain/model/: account.rs
src/domain/repository/: account.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/database/: posgresql.rs  redis.rs
src/infrastructure/repository/: account.rs  mod.rs
src/infrastructure/repository/account/: mod.rs  structure.rs
src/infrastructure/repository/database/: mod.rs  posgresql.rs
src/infrastructure/rest/: mod.rs
src/infrastructure/rest/controller/: account.rs
src/infrastructure/rest/router/: health_check.rs  mod.rs
