[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["headers"] }
config = "0.13.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
tower-http = { version = "0.3.5", features = [
  "trace",
  "compression-br",
  "propagate-header",
  "sensitive-headers",
  "cors",
] }
tracing = "0.1.37"
http = "0.2.9"
r2d2 = "~0.8"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7.1", features = [
  "runtime-async-std-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
redis = { version = "0.23.1", features = ["tokio-comp"] }
jsonwebtoken = "8.3.0"
axum-extra = { version = "0.7.5", features = ["cookie"] }
argon2 = "0.5.1"
base64 = "0.21.2"
async-trait = "0.1.72"
